added refresh methods to cluster
